--- a/apps/docs/src/styles.css
+++ b/apps/docs/src/styles.css
@@ -1,1 +1,82 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body {
+  height: 100vh;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: monospace;
+}
+
+
+nav {
+  display: flex;
+  flex-direction: column;
+
+  button {
+    height: 3em;
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    color: #646464;
+    background-color: white;
+  }
+
+  button:hover {
+    color: white;
+    background-color: #646464;
+  }
+
+  button:active {
+    color: white;
+    background-color: #33a62d;
+  }
+}
+
+/* documentation blocks */
+
+xpr-code pre {
+  padding: 1em;
+}
+
+
+/* micro-forms */
+
+.micro {
+  display: flex;
+  /*align-items: center;*/
+
+  button, select {
+    outline: 0;
+    border: 0;
+    color: black;
+    background: #c8d2ff;
+    height: 2em;
+    cursor: pointer;
+  }
+
+  button {
+    /*border: 1px solid purple;*/
+    /*outline: 1px solid red;*/
+    /*height: 20px;*/
+  }
+
+  select {
+    /*border: 1px solid purple;*/
+    /*outline: 1px solid red;*/
+    /*height: 20px;*/
+  }
+
+  button:hover, select:hover {
+    color: white;
+    background: #202f54;
+  }
+
+  button:active, select:active {
+    color: white;
+    background: #1859f6;
+  }
+}
+
