--- a/apps/docs/src/styles.css
+++ b/apps/docs/src/styles.css
@@ -1,41 +1,73 @@
-/* You can add global styles to this file, and also import other style files */
-
-
-
 html, body {
   height: 100vh;
 }
 
-body {
-  /*margin: 0;*/
-  /*padding: 0;*/
-  /*font-family: monospace;*/
+/* fix pico */
+
+dialog > article > header .close, dialog > article > header :is(a,button)[rel=prev] {
+  /* fix the position of the close button */
+  transform: translateY(5px);
+}
+
+/* pico overrides */
+
+button.toolbar {
+  /* small button with icon */
+  padding: 0;
 }
 
 
-/*nav {*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
+/* space utils */
 
-/*  button {*/
-/*    height: 3em;*/
-/*    width: 100%;*/
-/*    border: none;*/
-/*    cursor: pointer;*/
-/*    color: #646464;*/
-/*    background-color: white;*/
-/*  }*/
+.hvh {
+  height: 100vh;
+}
 
-/*  button:hover {*/
-/*    color: white;*/
-/*    background-color: #646464;*/
-/*  }*/
+.fh {
+  height: 100%;
+}
 
-/*  button:active {*/
-/*    color: white;*/
-/*    background-color: #33a62d;*/
-/*  }*/
-/*}*/
+.fw {
+  width: 100%;
+}
+
+.m-10 {
+  margin: 1rem;
+}
+
+.px-10 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+
+/* flex utils */
+.col, .row {
+  display: flex;
+}
+
+.col {
+  flex-direction: column;
+}
+
+.row {
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.grow {
+  flex: 1;
+}
+
+.centered {
+  align-items: center;
+  justify-content: center;
+}
+
+.g-10 {
+  gap: 1rem;
+}
+
 
 /* documentation blocks */
 
@@ -43,41 +75,20 @@ xpr-code pre {
   padding: 1em;
 }
 
+/* symbols */
 
-/* micro-forms */
-
-.micro {
-  display: flex;
-  /*align-items: center;*/
-
-  button, select {
-    outline: 0;
-    border: 0;
-    color: black;
-    background: #c8d2ff;
-    height: 2em;
-    cursor: pointer;
-  }
-
-  button {
-    /*border: 1px solid purple;*/
-    /*outline: 1px solid red;*/
-    /*height: 20px;*/
-  }
-
-  select {
-    /*border: 1px solid purple;*/
-    /*outline: 1px solid red;*/
-    /*height: 20px;*/
-  }
-
-  button:hover, select:hover {
-    color: white;
-    background: #202f54;
-  }
-
-  button:active, select:active {
-    color: white;
-    background: #1859f6;
-  }
+.sym {
+  font-family: 'Material Symbols Outlined';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
 }
